# segmentation-skeleton-metrics

./: README.md  demo.py  merge_metric.py  pyproject.toml  run_evaluation.py  setup.py  utils.py
.github/workflows/: ci.yml  lint_and_test.yml  tag.yml  tag_and_publish.yml
demo/: demo.py  evaluation_results.xls  merged_ids-segmentation.txt  merged_segment_ids.txt  results-overview.txt  results.csv  results.xls  results_overview.txt
doc_template/source/: conf.py
resources/: demo.py
resources/target_graphs/: 0.swc  1.swc  2.swc  3.swc  4.swc  5.swc
src/: graph_routines.py  merge_metric.py  seg_metrics.py  split_metric.py  utils.py
src/aind_segmentation_evaluation/: __init__.py  conversions.py  evaluate.py  explore_branches.py  graph_routines.py  graph_utils.py  merge_metric.py  nx_utils.py  run_evaluation.py  seg_metrics.py  split_metric.py  swc_routines.py  swc_utils.py  utils.py
src/eval_seg/: graph_routines.py  merge_metric.py  seg_metrics.py  split_metric.py
src/hello_world/: __init__.py
src/seg_eval/: __init__.py  graph_routines.py  merge_metric.py  seg_metrics.py  split_metric.py
src/segmentation_skeleton_metrics/: __init__.py  conversions.py  evaluate.py  geometry.py  graph_segmentation_alignment.py  graph_utils.py  merge_detection.py  merge_metric.py  nx_utils.py  projections.py  seg_metrics.py  skeleton_graph.py  skeleton_metric.py  skeleton_metrics.py  split_detection.py  split_metric.py  swc_utils.py  utils.py
src/segmentation_skeleton_metrics/data_handling/: graph_classes.py  graph_loading.py  skeleton_graph.py  swc_loading.py
src/segmentation_skeleton_metrics/utils/: graph_util.py  img_util.py  swc_util.py  util.py
tests/: demo.py  unit_tests.py
tests/target_graphs/: 0.swc  1.swc  2.swc  3.swc  4.swc  5.swc
